--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register src/server.ts",
-    "build": "npx tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/server.js"
   },
   "author": "Mohammad Reza Ghasemi",
@@ -31,6 +31,7 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.4.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.7.2"
   }
 }
